finally fixed overlap in port on mobile

--- a/portfolio/pstyle.css
+++ b/portfolio/pstyle.css
@@ -330,8 +330,47 @@ main h1 {
 }
 
 /* || ib COLUMN 2 */
+.inbetween .col2 > div {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url("../media/in-betweenSite.png");
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-.inbetween .col2 h2 {
+.inbetween .col2 h3 {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: calc(2vw + 2vh);
+
+  text-align: center;
+  font-size: 4rem;
+
+  transition: 0.1s all ease;
+}
+.inbetween .col2 h3:hover {
+  padding: calc(2.5vw + 2.5vh);
+}
+
+.inbetween .col2 h3 a {
+  display: block;
+  padding: calc(2vw + 2vh);
+}
+
+.inbetween .col2 h3 a:link {
+  color: white;
+}
+
+.inbetween .col2 h3 a:visited {
+  color: white;
+}
+
+.inbetween .col2 h3 a:active {
+  color: var(--inbetween-yellow);
+}
+
+/* .inbetween .col2 h2 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -365,14 +404,7 @@ main h1 {
   font-size: 4rem;
 
   transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-.inbetween .col2 div {
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-image: url("../media/in-betweenSite.png");
-}
+} */
 
 /* || media queries */
 
